[tool.poetry]
name = "calclick"
version = "0.1.0"
description = "Work Portal Automation"
authors = ["yonosemanana"]

[tool.poetry.dependencies]
python = "^3.12"  # Specifically target Python 3.12
selenium = "^4.17.2"
webdriver-manager = "^4.0.1"
python-dotenv = "^1.0.1"
schedule = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
